URL changes to routes and its swagger related code
